--- a/src/components/Logo/style.scss
+++ b/src/components/Logo/style.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables';
+
 .dots {
   display: flex;
   align-items:  center;
@@ -36,7 +38,7 @@
 
 .dot {
   border-radius: 50%;
-  background: red;
+  background: $color-dot;
 
   &--m {
     width: 20px;
