- корректировки стилей и нотфиикейшенов

--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -26,6 +26,11 @@
     justify-content: center;
     border-radius: 50%;
   }
+
+  &__buttons-section {
+    margin-top: 9px;
+    align-self: center;
+  }
 }
 
 .dot-avatar {
