#34  - корректировки стилей, чтобы форма профиля не прыгала

--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -28,7 +28,13 @@
   }
 
   .form-control--is-read-only {
-    margin: 8px 0;
+    margin-bottom: 8px;
+    margin-top: 0;
+
+    input {
+      padding-left: 17px;
+      margin-top: 8px;
+    }
   }
 
   &__buttons-section,
