--- a/src/pages/GamePlay/style.scss
+++ b/src/pages/GamePlay/style.scss
@@ -1,7 +1,12 @@
 .playing-field {
-  // width: 80vw;
-  // height: 80vh;
   overflow: hidden;
   margin: auto;
-  margin-top: 50px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3000;
+  width: 100vw;
+  height: 100vh;
 }
