--- a/src/pages/GamePlay/style.scss
+++ b/src/pages/GamePlay/style.scss
@@ -1,7 +1,6 @@
 .playing-field {
   overflow: hidden;
   margin: auto;
-  margin-top: 40px;
   position: fixed;
   top: 0;
   right: 0;
@@ -9,5 +8,5 @@
   left: 0;
   z-index: 3000;
   width: 100vw;
-  height: calc(100vh - 40px);
+  height: 100vh;
 }
