--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -1,8 +1,9 @@
+@import 'styles/variables';
 
 .profile {
   &__avatar-wrap {
     position: relative;
-    border: 2px solid #FF4903;
+    border: 2px solid $color-dot;
     border-radius: 50%;
 
   }
@@ -47,7 +48,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #FF4903;
+  background: $color-dot;
 
   &:last-child {
     margin-left: 20px;
