--- a/src/pages/Forum/style.scss
+++ b/src/pages/Forum/style.scss
@@ -7,17 +7,21 @@
     padding: 6px; 
     border:2px purple solid;
 }
+
 .them:hover{
     transform: scale(1.005);
-    background-color: rgb(238, 175, 230);
+    background-color: rgb(238 175 230);
 }
+
 .nav-link{
     text-decoration: underline;
 }
+
 .nav-link:hover{
     transform: scale(1.005);
-    background-color: rgb(238, 175, 230);
+    background-color: rgb(238 175 230);
 }
+
 .message{
     border-radius:7px;
     margin-top: 4px;
@@ -25,6 +29,7 @@
     padding: 6px; 
     border:2px purple solid;
 }
+
 .resize_none{
     resize: none;
 }
